# RagPipeline

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  GROQ_INTEGRATION.md  GROQ_INTEGRATION_COMPLETE.md  GROQ_QUICK_START.md  LLM_INTEGRATION.md  LLM_INTEGRATION_SUMMARY.md  README.md  input.txt  llm_integration.py  main.py  main_langgraph.py  pipeline_output.txt  pre-commit-output.txt  precommit_final_output.txt  pyproject.toml  requirements.txt  test_pipeline.py
config/: config.yaml
faiss_indices/: customer_index  financial_report_index
src/: __init__.py  chunking.py  config.py  loader.py  loaders.py  retriever.py  utils.py
